--- a/index.html
+++ b/index.html
@@ -20,5 +20,7 @@
         
         <a-camera gps-camera rotation-reader></a-camera>
         <a-entity gltf-model="./assets/magnemite/scene.gltf" rotation="0 180 0" scale="0.15 0.15 0.15" gps-entity-place="longitude: 13.890991; latitude: 42.905036;" animation-mixer/>
+		
+        <a-image src="./assets/demo.jpg" rotation="0 180 0" scale="0.15 0.15 0.15" gps-entity-place="longitude: 13.990991; latitude: 42.925036;" animation-mixer/>
 	</a-scene>
 </body>
