--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         arjs='sourceType: webcam; sourceWidth:1280; sourceHeight:960; displayWidth: 1280; displayHeight: 960; debugUIEnabled: true;'>
         
         <a-camera gps-camera rotation-reader></a-camera>
-        <a-entity gltf-model="./assets/magnemite/scene.gltf" rotation="0 180 0" scale="0.15 0.15 0.15" gps-entity-place="longitude: 13.190991; latitude: 42.505036;" animation-mixer/>		
-        <a-image src="./assets/demo.jpg" rotation="0 180 0" scale="1 1 1" gps-entity-place="longitude: 13.990991; latitude: 42.925036;"r/>
+        
+        <a-text value="This content will always face you." look-at="[gps-camera]" scale="50 50 50"
+            gps-entity-place="latitude: <add-your-latitude>; longitude: <add-your-longitude>;"></a-text>
 	</a-scene>
 </body>
