--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
         arjs='sourceType: webcam; sourceWidth:1280; sourceHeight:960; displayWidth: 1280; displayHeight: 960; debugUIEnabled: true;'>
         
         <a-camera gps-camera rotation-reader></a-camera>
-        
         <a-text value="This content will always face you." look-at="[gps-camera]" scale="50 50 50"
-            gps-entity-place="latitude: <add-your-latitude>; longitude: <add-your-longitude>;"></a-text>
+            gps-entity-place="longitude: 13.190991; latitude: 42.505036;"></a-text>
 	</a-scene>
 </body>
