--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         arjs='sourceType: webcam; sourceWidth:1280; sourceHeight:960; displayWidth: 1280; displayHeight: 960; debugUIEnabled: true;'>
         
         <a-camera gps-camera rotation-reader></a-camera>
-        <a-text value="This content will always face you." look-at="[gps-camera]" scale="50 50 50"
-            gps-entity-place="longitude: 13.190991; latitude: 42.505036;"></a-text>
+        <a-entity gltf-model="./assets/magnemite/scene.gltf" rotation="0 180 0" scale="0.15 0.15 0.15" gps-entity-place="longitude: 13.190991; latitude: 42.505036;" animation-mixer/>		
+        
 	</a-scene>
 </body>
