--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </a-assets>
 
         <!-- Using the asset management system. -->
-        <a-image src="/assets/demo.jpg" gps-entity-place="longitude: 13.891561; latitude: 42.905086;"  look-at="[gps-camera]" scale="120 120 120"></a-image>
+        <a-image src="/assets/demo.jpg" ></a-image>
 
        
         <a-camera gps-camera rotation-reader> </a-camera>
