--- a/index.html
+++ b/index.html
@@ -18,10 +18,20 @@
 		embedded
         arjs='sourceType: webcam; sourceWidth:1280; sourceHeight:960; displayWidth: 1280; displayHeight: 960; debugUIEnabled: true;'>
         
+        <a-assets>
+            <img id="muflo-img" src="/assets/demo.jpg">
+        </a-assets>
+
         <a-camera gps-camera rotation-reader></a-camera>
         <!-- <a-entity gltf-model="./assets/magnemite/scene.gltf" rotation="0 180 0" scale="0.15 0.15 0.15" gps-entity-place="longitude: 13.891561; latitude: 42.905086;" animation-mixer/>		 -->
         <!-- Using the asset management system. -->
         <a-image src="/assets/demo.jpg"></a-image>
+
+        <a-plane  
+            src="#muflo-img"
+            width="2"
+            height="2"
+            rotation="0 0 0"></a-plane>
 
 	</a-scene>
 </body>
